--- a/simple.css
+++ b/simple.css
@@ -39,8 +39,14 @@ a{
 	color:black;
 	text-decoration:none;
 }
+a:hover{
+	color:#555;
+}
 .inline-link{
 	color: green;
+}
+.inline-link:hover{
+	color: #00aa00;
 }
 ul li{
 	display:inline-block;
