--- a/simple.css
+++ b/simple.css
@@ -27,6 +27,10 @@ h3{
 .section{
 	text-align:center;
 }
+img{
+border-radius: 6px 6px 6px 6px;
+	box-shadow: 8px 8px 7px 0px rgba(0,0,0,0.75);
+}
 #menu li{
 	display:inline-block;
 	padding: 5px 20px;
