--- a/simple.css
+++ b/simple.css
@@ -1,7 +1,7 @@
 body{
 		font-family:'Oswald',calibri, arial;
 		font-size:1.2em;
-		text-shadow: 1px 1px #ccc;
+		/*text-shadow: 1px 1px #ccc;*/
 		/*color:white;*/
 }
 
@@ -33,18 +33,18 @@ border-radius: 6px 6px 6px 6px;
 }
 #menu li{
 	display:inline-block;
-	padding: 5px 20px;
+	padding: 1px 20px;
 	color: #ccc;
 }
 #menu li.active{
-   color: #000;
+   color: #fff;
 }
 a{
-	color:black;
+	color:#ccc;
 	text-decoration:none;
 }
 a:hover{
-	color:#555;
+	color:#fff;
 }
 .inline-link{
 	color: green;
@@ -54,13 +54,13 @@ a:hover{
 	color: #00aa00;
 }
 .controlArrow{
-	visibility:hidden;
+	/*visibility:hidden;*/
 }
 ul li{
 	display:inline-block;
 }
 #menu{
-	/*background-color:#aaaaaa;*/
+	background-color:#122A12;
 		position:fixed;
 	top:0;
 	left:0;
